# SpotDLextended

./: .gitattributes  .gitignore  LICENSE  install.sh  pyproject.toml  readme.md
.github/workflows/: build-exe.yml
spotdlextended/: __main__.py  cli.py  downloader.py  settings.py  slsk-example-from-other-app.js  test.py  test_dynamic.py  test_spectrum.py  xml_exporter.py
