[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SpotDLextended"
version = "0.1.0"
dependencies = [
    "requests",
    "rapidfuzz",
    "mutagen",
    "SpotifyScraper"
]
description = "Spotify to FLAC Extended Mix Downloader"
readme = "readme.md"

[project.scripts]
spotdl-ext = "spotdlextended.__main__:main"
